--- a/_posts/2021-03-14-Apriori/Apriori.html
+++ b/_posts/2021-03-14-Apriori/Apriori.html
@@ -110,12 +110,12 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <!--radix_placeholder_rmarkdown_metadata-->
 
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output"]}},"value":[{"type":"character","attributes":{},"value":["关联规则在名医经验数据挖掘中的应用"]},{"type":"character","attributes":{},"value":["智能医学社公开课\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url"]}},"value":[{"type":"character","attributes":{},"value":["Hao Liang"]},{"type":"character","attributes":{},"value":["https://coogle.ink"]}]}]},{"type":"character","attributes":{},"value":["03-14-2021"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained","toc"]}},"value":[{"type":"logical","attributes":{},"value":[false]},{"type":"logical","attributes":{},"value":[true]}]}]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output","categories"]}},"value":[{"type":"character","attributes":{},"value":["关联规则在名医经验数据挖掘中的应用"]},{"type":"character","attributes":{},"value":["智能医学社公开课\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url"]}},"value":[{"type":"character","attributes":{},"value":["Hao Liang"]},{"type":"character","attributes":{},"value":["https://coogle.ink"]}]}]},{"type":"character","attributes":{},"value":["03-14-2021"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained","toc"]}},"value":[{"type":"logical","attributes":{},"value":[false]},{"type":"logical","attributes":{},"value":[true]}]}]},{"type":"character","attributes":{},"value":["Digital Chinese medicine","R tips"]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"character","attributes":{},"value":["ABCD.png","ABCDE.png","Apriori p.png","Apriori step.png","Apriori_files/anchor-4.2.2/anchor.min.js","Apriori_files/bowser-1.9.3/bowser.min.js","Apriori_files/distill-2.2.21/template.v2.js","Apriori_files/figure-html5/unnamed-chunk-10-1.png","Apriori_files/figure-html5/unnamed-chunk-10-2.png","Apriori_files/figure-html5/unnamed-chunk-8-1.png","Apriori_files/figure-html5/unnamed-chunk-8-2.png","Apriori_files/figure-html5/unnamed-chunk-9-1.png","Apriori_files/figure-html5/unnamed-chunk-9-2.png","Apriori_files/header-attrs-2.6/header-attrs.js","Apriori_files/jquery-1.11.3/jquery.min.js","Apriori_files/kePrint-0.0.1/kePrint.js","Apriori_files/lightable-0.0.1/lightable.css","Apriori_files/popper-2.6.0/popper.min.js","Apriori_files/tippy-6.2.7/tippy-bundle.umd.min.js","Apriori_files/tippy-6.2.7/tippy-light-border.css","Apriori_files/tippy-6.2.7/tippy.css","Apriori_files/tippy-6.2.7/tippy.umd.min.js","Apriori_files/webcomponents-2.0.0/webcomponents.js","basket.jpg","test.csv"]}
+  {"type":"character","attributes":{},"value":["ABCD.png","ABCDE.png","Apriori p.png","Apriori step.png","Apriori_files/anchor-4.2.2/anchor.min.js","Apriori_files/bowser-1.9.3/bowser.min.js","Apriori_files/distill-2.2.21/template.v2.js","Apriori_files/figure-html5/unnamed-chunk-10-1.png","Apriori_files/figure-html5/unnamed-chunk-10-2.png","Apriori_files/figure-html5/unnamed-chunk-8-1.png","Apriori_files/figure-html5/unnamed-chunk-8-2.png","Apriori_files/figure-html5/unnamed-chunk-9-1.png","Apriori_files/figure-html5/unnamed-chunk-9-2.png","Apriori_files/header-attrs-2.6/header-attrs.js","Apriori_files/jquery-1.11.3/jquery.min.js","Apriori_files/kePrint-0.0.1/kePrint.js","Apriori_files/lightable-0.0.1/lightable.css","Apriori_files/pagedtable-1.1/css/pagedtable.css","Apriori_files/pagedtable-1.1/js/pagedtable.js","Apriori_files/popper-2.6.0/popper.min.js","Apriori_files/tippy-6.2.7/tippy-bundle.umd.min.js","Apriori_files/tippy-6.2.7/tippy-light-border.css","Apriori_files/tippy-6.2.7/tippy.css","Apriori_files/tippy-6.2.7/tippy.umd.min.js","Apriori_files/webcomponents-2.0.0/webcomponents.js","basket.jpg","test.csv"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
   <!--/radix_placeholder_navigation_in_header-->
@@ -1468,6 +1468,10 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <div class="d-title">
 <h1>关联规则在名医经验数据挖掘中的应用</h1>
 <!--radix_placeholder_categories-->
+<div class="dt-tags">
+<div class="dt=tag">Digital Chinese medicine</div>
+<div class="dt=tag">R tips</div>
+</div>
 <!--/radix_placeholder_categories-->
 <p><p>智能医学社公开课</p></p>
 </div>
