--- a/_posts/2021-03-14-Apriori/Apriori.html
+++ b/_posts/2021-03-14-Apriori/Apriori.html
@@ -1498,6 +1498,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 </ul></li>
 <li><a href="#一些概念">一些概念</a>
 <ul>
+<li><a href="#事物库数据集dataset">事物库（数据集）dataset</a></li>
 <li><a href="#项集-itemset">项集-Itemset</a></li>
 <li><a href="#支持度计数-support-count-sigma">支持度计数-Support count (<span class="math inline">\(\sigma\)</span>)</a></li>
 <li><a href="#支持度-supports">支持度-Support(s)</a></li>
@@ -1566,7 +1567,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <h3 id="in-medicine">In medicine</h3>
 <p>Relationships between symptoms and illnesses; diagnosis and patient characteristics and treatments (to be used in medical DSS); and genes and their functions (to be used in genomics projects)…</p>
 <h2 id="一些概念">一些概念</h2>
-<p>###　事物库（数据集）dataset</p>
+<h3 id="事物库数据集dataset">事物库（数据集）dataset</h3>
 <table style="width:99%;">
 <colgroup>
 <col style="width: 36%" />
